// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules/Navigation/Profile Link Default 1`] = `
.c3 {
  display: inline-block;
  height: 2.5rem;
  width: 2.5rem;
  border-radius: 9999px;
}

.c2 {
  --text-opacity: 1;
  color: rgba(88,80,236,var(--text-opacity));
}

.c2:hover {
  --text-opacity: 1;
  color: rgba(54,47,120,var(--text-opacity));
}

.c0 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --bg-opacity: 1;
  background-color: rgba(55,65,81,var(--bg-opacity));
  padding: 1rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  margin-left: 0.75rem;
}

.c5 {
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 500;
  --text-opacity: 1;
  color: rgba(255,255,255,var(--text-opacity));
}

.c7 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: 500;
  --text-opacity: 1;
  color: rgba(159,166,178,var(--text-opacity));
  -webkit-transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,-webkit-transform;
  -webkit-transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform;
  transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
}

.c7:focus {
  outline: 2px solid transparent;
  outline-offset: 2px;
}

.group:hover .c6 {
  --text-opacity: 1;
  color: rgba(210,214,220,var(--text-opacity));
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <a
      className="c2"
      href="/profile"
      onClick={[Function]}
    >
      <img
        alt="Avatar"
        className="c3"
        src="/img/testing_thumb.jpg"
      />
    </a>
    <div
      className="c4"
    >
      <a
        className="c2"
        href="/profile"
        onClick={[Function]}
      >
        <p
          className="c5"
        >
          Jeff Bytezos
        </p>
      </a>
      <button
        className="c6 c7"
        onClick={[Function]}
        type="button"
      >
        Logout
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/Navigation/Profile Link Loading 1`] = `
.c3 {
  display: inline-block;
  height: 2.5rem;
  width: 2.5rem;
  border-radius: 9999px;
}

.c6 {
  position: relative;
  border-radius: 0.25rem;
  overflow: hidden;
  --bg-opacity: 1;
  background-color: rgba(210,214,220,var(--bg-opacity));
  display: inline-block;
  height: 1.25rem;
}

.c6::after {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  -webkit-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
  background-image: linear-gradient( 90deg, rgba(255,255,255,0) 0, rgba(255,255,255,0.2) 20%, rgba(255,255,255,0.5) 60%, rgba(255,255,255,0) );
  -webkit-animation: efYAKb 2s infinite;
  animation: efYAKb 2s infinite;
  content: '';
}

.c2 {
  --text-opacity: 1;
  color: rgba(88,80,236,var(--text-opacity));
}

.c2:hover {
  --text-opacity: 1;
  color: rgba(54,47,120,var(--text-opacity));
}

.c0 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --bg-opacity: 1;
  background-color: rgba(55,65,81,var(--bg-opacity));
  padding: 1rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  margin-left: 0.75rem;
}

.c5 {
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 500;
  --text-opacity: 1;
  color: rgba(255,255,255,var(--text-opacity));
}

.c7 {
  width: 3rem;
  margin-right: 0.25rem;
}

.c8 {
  width: 4rem;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <a
      className="c2"
      href="/profile"
      onClick={[Function]}
    >
      <img
        alt="Avatar"
        className="c3"
        src="/img/avatar_placeholder.png"
      />
    </a>
    <div
      className="c4"
    >
      <p
        className="c5"
      >
        <span
          className="c6 c7"
        />
        <span
          className="c6 c8"
        />
      </p>
    </div>
  </div>
</div>
`;
